fieldx/tests/uncompilable/stable+serde,async-tokio,clonable-lock/private.stderr
error: feature 'sync' is required
 --> tests/uncompilable/private.rs
  |
  |     #[fxstruct(sync)]
  |                ^^^^
